# roy

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  INSTALL.md  README.md
.github/workflows/: ci.yml
crates/roy/: Cargo.toml
crates/roy-agents/: Cargo.toml
crates/roy-agents/src/: db.rs  lib.rs  slug.rs  store.rs  types.rs
crates/roy-auth/: Cargo.toml
crates/roy-auth/migrations/sqlite/: 0002_initial.sql  0010_users.sql  0011_teams.sql  0012_team_invites.sql
crates/roy-auth/src/: acl.rs  cookie.rs  db.rs  invite_store.rs  jwt.rs  lib.rs  password.rs  team_store.rs  test_support.rs  types.rs  user_store.rs
crates/roy-auth/tests/: invites.rs  jwt.rs  store.rs
crates/roy-cli/: Cargo.toml
crates/roy-cli/src/: auth.rs  main.rs  management.rs  management_client.rs  mcp.rs
crates/roy-gateway/: Cargo.toml  README.md
crates/roy-gateway/src/: binder.rs  cancel.rs  config.rs  daemon.rs  draft_stream.rs  formatting.rs  lib.rs  main.rs  orchestrator.rs  telegram.rs  typing.rs  ws.rs
crates/roy-gateway/tests/: binder_persistence.rs  ws_auth.rs
crates/roy-inbound/: Cargo.toml  README.md
crates/roy-inbound/migrations/sqlite/: 0001_initial.sql
crates/roy-inbound/src/: bus.rs  cli.rs  config.rs  daemon_client.rs  dispatcher.rs  lib.rs  main.rs  reply.rs  router.rs  session.rs  template.rs
crates/roy-inbound/src/channels/: mod.rs
crates/roy-inbound/src/channels/telegram/: mod.rs  reply.rs
crates/roy-inbound/src/channels/webhook/: config.rs  mod.rs  reply.rs
crates/roy-inbound/src/store/: bindings.rs  db.rs  mod.rs
crates/roy-inbound/tests/: integration.rs
crates/roy-management/: Cargo.toml  README.md
crates/roy-management/migrations/sqlite/: 0001_initial.sql  0003_builder_seed_v2.sql  0003_channel_bindings.sql  0004_projects_and_session_meta.sql  0005_owners.sql  0006_drop_legacy_agents.sql  0007_connections.sql  0008_connections_provider_id.sql
crates/roy-management/resources/: connections.default.yaml
crates/roy-management/src/: agents.rs  auth.rs  bootstrap.rs  channel_bindings.rs  commands.rs  connections.rs  cwd.rs  db.rs  http.rs  lib.rs  main.rs  meta_store.rs  orphan_sweep.rs  provider_catalog.rs  rate_limit.rs  roy_client.rs  state.rs  uploads.rs
crates/roy-management/tests/: acl.rs  auth_flow.rs  commands_discovery.rs  connections_http.rs  e2e_spawn.rs  provider_catalog.rs  providers_http.rs  run_integration.rs  session_cwd.rs  telegram_bindings.rs
crates/roy-management/tests/common/: mod.rs
crates/roy-mcp/: Cargo.toml
crates/roy-mcp/src/: lib.rs
crates/roy-mcp/src/serve_connections/: dispatch.rs  mod.rs  registry.rs  spec.rs  upstream.rs
crates/roy-mcp/tests/: serve_connections.rs
crates/roy-mcp/tests/scripts/: fake-mcp-upstream.py
crates/roy-protocol/: Cargo.toml
crates/roy-protocol/src/: channel.rs  control.rs  harnesses.rs  journal.rs  lib.rs  pid_lock.rs  wire.rs
crates/roy-scheduler/: Cargo.toml
crates/roy-scheduler/migrations/postgres/: 0001_initial.sql
crates/roy-scheduler/migrations/sqlite/: 0001_initial.sql  0002_notify_session.sql  0003_rename_preset_to_harness.sql
crates/roy-scheduler/src/: cli.rs  db.rs  driver.rs  lib.rs  main.rs  pid_lock.rs  plan.rs  read.rs  roy_client.rs  types.rs
crates/roy-scheduler/src/store/: agents.rs  fires.rs  mod.rs  subscribers.rs  triggers.rs
crates/roy-scheduler/src/subscribers/: dispatch.rs  inject_parent.rs  mod.rs  notify_native.rs  registry.rs  webhook.rs
crates/roy-scheduler/tests/: e2e.rs
crates/roy/examples/: demo_claude.rs  demo_claude_agent.rs  demo_codex.rs  demo_gemini.rs  demo_opencode.rs  engine_two_attach.rs
crates/roy/migrations/sqlite/: 0001_initial.sql  0001_sessions.sql  0002_rename_agent_to_harness.sql
crates/roy/src/: agents_config.rs  control.rs  daemon.rs  engine.rs  error.rs  event.rs  harnesses_config.rs  journal.rs  lib.rs  manager.rs  pid_lock.rs  project.rs  session.rs  session_meta.rs  session_store.rs
crates/roy/src/transport/: mod.rs
crates/roy/src/transport/acp/: mcp_injection.rs  mod.rs
crates/roy/templates/: agents_sample.toml  harnesses_sample.toml
crates/roy/tests/: acp_transport.rs  engine.rs
crates/roy/tests/scripts/: fake-acp-agent.py  fake-agent.sh
docker/: .dockerignore  .env.example  .gitignore  Dockerfile.roy  Dockerfile.web  Dockerfile.workspace  README.md  docker-compose.prod.yml  docker-compose.yml  gateway.toml  nginx.conf
docker/builtin-agents/: roy-coder.md
docker/scripts/: deploy.sh
docs/: README.md  accounts.md  agents-config.md  architecture.md  harnesses-config.md  persistence.md  wire-protocol.md
docs/examples/: inbound.example.toml
docs/superpowers/plans/: 2026-05-22-gemini-acp-transport.md  2026-05-22-roy-core.md  2026-05-23-projects-implementation.md  2026-05-23-roy-extensions.md  2026-05-23-roy-gateway-telegram.md  2026-05-24-agents-config.md  2026-05-24-agents-personas-core.md  2026-05-24-inject-into-active-session.md  2026-05-24-roy-gateway-v1.1.md  2026-05-24-roy-scheduler.md  2026-05-24-scheduler-design-cleanup.md  2026-05-24-session-core-refactor.md  2026-05-24-spawn-resume-loading-ack.md  2026-05-24-ws-gateway.md  2026-05-25-agent-builder.md  2026-05-25-agent-driven-inject.md  2026-05-25-agents-management.md  2026-05-25-inbound-event-bus.md  2026-05-25-session-metadata-split-store.md  2026-05-25-user-auth-commands.md  2026-05-27-agent-connections-telegram.md  2026-05-27-connection-catalog.md  2026-05-27-connections-mcp-proxy.md  2026-05-27-session-collaboration.md  2026-05-29-roy-protocol-extraction.md  2026-05-29-telegram-bot-channels-ui.md  2026-05-29-telegram-support-agent-binding.md
examples/: demo.rs  demo_gemini.rs  demo_opencode.rs  engine_two_attach.rs
src/: engine.rs  error.rs  event.rs  lib.rs  provider.rs  session.rs  transport.rs
src/transport/: mod.rs  print.rs
src/transport/acp/: client.rs  (+2 more)
tests/: acp_transport.rs  fake_provider.rs
tests/scripts/: fake-acp-agent.py
workspace/: .env.example  .gitignore  README.md  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
workspace/src/: App.svelte  app.css  main.ts
(+98 files in other folders)
