[package]
name = "roy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["process", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
async-stream = "0.3"
futures-core = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
agent-client-protocol = "0.12.1"

[dev-dependencies]
futures = "0.3"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "demo_gemini"
path = "examples/demo_gemini.rs"

[[example]]
name = "demo_opencode"
path = "examples/demo_opencode.rs"

[[example]]
name = "demo_codex"
path = "examples/demo_codex.rs"

[[example]]
name = "demo_claude_agent"
path = "examples/demo_claude_agent.rs"
