[package]
name = "roy-auth"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = []
test-support = []

[dependencies]
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "sqlite",
  "chrono",
  "macros",
  "migrate",
] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.16"
jsonwebtoken = { version = "9", default-features = false }
hex = "0.4"
rand = "0.8"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
