[package]
name = "roy-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "roy"
path = "src/main.rs"
# Suppress rustdoc for the binary: its target collides with the `roy` library's
# at target/doc/roy/index.html. The library is the documented surface.
doc = false

[dependencies]
roy = { path = "../roy" }
roy-mcp = { path = "../roy-mcp" }
roy-gateway = { path = "../roy-gateway" }
roy-scheduler = { path = "../roy-scheduler" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "net", "sync", "time"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
