[package]
name = "roy-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "roy-gateway"
path = "src/main.rs"
doc = false

[dependencies]
roy = { path = "../roy" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "net", "sync", "time", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
teloxide = { version = "0.13", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }

[dev-dependencies]
tempfile = "3"
