[package]
name = "roy-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
roy = { path = "../roy" }
roy-auth = { path = "../roy-auth" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "net", "sync", "time", "fs", "signal"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
async-trait = "0.1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
teloxide = { version = "0.13", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
roy-auth = { path = "../roy-auth", features = ["test-support"] }
tempfile = "3"
