[package]
name = "roy-inbound"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "roy-inbound"
path = "src/main.rs"

[dependencies]
roy = { path = "../roy" }

# DB
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "sqlite",
  "chrono",
  "macros",
  "migrate",
] }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
hyper = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Serde / errors / logging / ids / time
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Crypto for webhook HMAC
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
