[package]
name = "roy-management"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "roy-management"
path = "src/main.rs"

[dependencies]
roy = { path = "../roy" }
roy-agents = { path = "../roy-agents" }

axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
