[package]
name = "roy-management"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = []
# Exposes `roy_client::mock::MockDaemonClient` to other crates' tests.
# Enabled automatically inside this crate via `cfg(test)`; sibling crates
# that need the mock should add `features = ["test-support"]` under
# `[dev-dependencies]`.
test-support = []

[dependencies]
roy = { path = "../roy" }
roy-agents = { path = "../roy-agents" }
roy-auth = { path = "../roy-auth" }
roy-scheduler = { path = "../roy-scheduler" }

axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"

uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = "2"
rand = "0.8"
hex = "0.4"
dirs = "5"

[dev-dependencies]
# Self-referencing path enables the `test-support` feature for integration
# tests, which makes `roy_client::mock::MockDaemonClient` accessible from
# `tests/*.rs`. This is the standard cargo pattern; the build graph isn't
# truly cyclic — dev-deps only activate for the `tests`/`examples` targets.
roy-management = { path = ".", features = ["test-support"] }
roy-auth = { path = "../roy-auth", features = ["test-support"] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serial_test = "3"
