[package]
name = "roy-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
roy = { path = "../roy" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "net"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
