[package]
name = "roy-scheduler"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "roy-scheduler"
path = "src/main.rs"

[dependencies]
roy = { path = "../roy" }

# DB (sqlite default; postgres feature deferred per spec §6.1)
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "sqlite",
  "chrono",
  "macros",
  "migrate",
] }

# Time + cron
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
chrono-tz = "0.10"
croner = "2"

# HTTP (webhook subscriber)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Serde / errors / logging / ids
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
which = "7"
wiremock = "0.6"
