[package]
name = "roy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time", "fs"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
dunce = "1"
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
agent-client-protocol = "0.12.1"
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "sqlite",
  "chrono",
  "macros",
  "migrate",
] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
libc = "0.2"
tracing = "0.1"

[dev-dependencies]
futures = "0.3"
tempfile = "3"
temp-env = { version = "0.3", features = ["async_closure"] }

[[example]]
name = "demo_gemini"
path = "examples/demo_gemini.rs"

[[example]]
name = "demo_opencode"
path = "examples/demo_opencode.rs"

[[example]]
name = "demo_codex"
path = "examples/demo_codex.rs"

[[example]]
name = "demo_claude"
path = "examples/demo_claude.rs"

[[example]]
name = "engine_two_attach"
path = "examples/engine_two_attach.rs"
